<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >
  <item
      android:id="@+id/search"
      android:actionViewClass="android.widget.SearchView"
      android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
      android:title="@string/search"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="collapseActionView|ifRoom"
      />
  <item
      android:id="@+id/action_add"
      android:orderInCategory="100"
      android:title="@string/add_book"
      app:showAsAction="never"
      />
  <item
      android:id="@+id/action_seed"
      android:orderInCategory="100"
      android:title="@string/seed"
      app:showAsAction="never"
      />
  <item
      android:id="@+id/action_delete_all"
      android:orderInCategory="100"
      android:title="@string/delete_all"
      app:showAsAction="never"
      />
</menu>
