<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.grayherring.swagbooktracker.activity.BookDetailsActivity"
    >

  <item
      android:id="@+id/action_share"
      android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
      android:title="@string/share"
      app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
      app:showAsAction="ifRoom"
      />
  <item
      android:id="@+id/action_delete"
      android:orderInCategory="100"
      android:title="@string/delete"
      app:showAsAction="never"
      />

  <item
      android:id="@+id/action_update"
      android:orderInCategory="200"
      android:title="@string/update"
      app:showAsAction="never"
      />
</menu>
